@@ -41,6 +41,7 @@ Verilator 5.017 devel
 * Fix broken link error for enum references (#4551). [Anthony Donlon]
 * Fix instance arrays connecting to array of structs (#4557). [raphmaster]
 * Fix shift to remove operation side effects (#4563).
+* Fix compile warning on unused member function variable (#4567).
 * Fix preprocessor to show `line 2 on resumed file.
 
 
